Revelation changelog

---------------[ xxxx-xx-xx : 0.3.1 ]---------------

2004-04-30  Erik Grinaker <erikg@codepoet.no>

	* fixed a bug which caused the file selector to be opened
	when saving a file on quit confirmation


---------------[ 2004-04-06 : 0.3.0 ]---------------

2004-04-05  Erik Grinaker <erikg@wired-networks.net>

	* fixed a bug which caused previously expanded folders to
	retain the open folder icon after the file is unlocked

	* set a sane default button (cancel) for the revert
	confirmation dialog

	* added a NEWS file

	* added note on restarting gconfd to the INSTALL file

2004-03-31  Erik Grinaker <erikg@wired-networks.net>

	* fixed the gconf schema installation

	* fixed a couple of bugs introduced in recent changes

2004-03-26  Erik Grinaker <erikg@wired-networks.net>

	* make setup.py register the gconf schema with the gconf daemon

2004-03-25  Erik Grinaker <erikg@wired-networks.net>

	* fixed a bug in DataStore.iter_traverse_next() which
	caused it to fail when given None as input

	* the password generator now uses a balancing algorithm
	which ensures a minimum amount of the different
	character classes

	* doubleclicking an entry now opens the edit dialog. also
	moved the edit and remove menu items to the top of the
	entry popup menu, for hig compliance

	* added tooltips to preference and find dialogs

	* the find dialog can be closed by pressing Escape

	* removed the Usenet account type - old accounts are
	converted to the Generic type on load

2004-03-22  Erik Grinaker <erikg@wired-networks.net>

	* fixed some bugs introduced by the recent code cleanups

	* added a File/Close menu item, for HIG compliance

	* restrict the length of entry fields in the password dialog,
	to prevent passwords longer than the AES key length to be given

	* the password dialog gives the focus to the password entry
	whenever it is run (after displaying an error dialog etc)

2004-03-20  Erik Grinaker <erikg@wired-networks.net>
